# AsyncAPI

./: .cz.yaml  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  mdbook.yml
conceptual/: basic_generator_flow.excalidraw  templatingLibDecision.md  templatingLibDecision.org
doc/: book.toml  templates.org
doc/src/: SUMMARY.md
example/demo/: automatic_lighting.yaml
example/schemas/: anyOf.yaml  array.yaml  signupSubscriber.yaml  simpleString.yaml  userPayload.json  userPayloadNested.json
example/specs/: anyof.yml  basic.yaml  basic_queue_groups.yaml  basic_queues_and_stream.yaml  basic_queues_and_stream_messages.yaml  basic_ref.yml  gitter-streaming.yml  invalid-names.yaml  not.yml  oneof.yml  operation-security.yml  rpc-client.yml  rpc-server.yml  simple.yml  streetlights-mqtt.yml  test_stream.yml  userSignupSubscriber.yaml
specs/: basic.yaml
src/: generator.rs  main.rs  parser.rs  utils.rs
src/asyncapi_model/: Attribution.txt  api.rs  channel.rs  channel_binding.rs  components.rs  correlation_id.rs  external_documentation.rs  info.rs  message.rs  message_binding.rs  message_trait.rs  mod.rs  operation_binding.rs  operation_trait.rs  schema.rs  server.rs  server_binding.rs  tag.rs  variant_or.rs
src/cli/: mod.rs
templates/: .env  .env.go  Cargo.toml.go  Readme.md  Readme.md.go  dependencies.toml  example.go  handler.go  handler.rs  handler.rstmpl  main.go  main.rs  main.rstmpl  model.go  pubsub.rstmpl  pubsub.tmpl  stream_handler.go  stream_main.go  streaming.tmpl
user_templates/: test.go.rs
(+71 files in other folders)
