[package]
name = "asyncapi-rust-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "*"
rust-embed = "*"
serde_yaml="0.9.21"
serde_json="1.0.96"
serde = {version = "1.0.130", features = ["derive"]}
indexmap = { version = "1.8.1", features = ["serde-1"] }
