[package]
name = "asyncapi-rust-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "*"
serde_yaml="0.9.21"
serde_json="1.0.96"
serde = {version = "1.0.130", features = ["derive"]}
indexmap = { version = "1.8.1", features = ["serde-1"] }
gtmpl = "0.7.1"
gtmpl_derive = "0.5.0"
gtmpl_value = "0.5.1"
regex = "1.8.1"
Inflector = "0.11.4"
